--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,10 @@ uuid = "7d06c537-f8ff-4c22-91e1-ce4088e3cfd7"
 authors = ["Benjamin Cohen-Stead <benwcs@gmail.com>"]
 version = "0.1.0"
 
+[deps]
+DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+
 [compat]
 julia = "1.7"
 
