--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Benjamin Cohen-Stead <benwcs@gmail.com>"]
 version = "0.1.0"
 
 [deps]
+FastLapackInterface = "29a986be-02c6-4525-aec4-84b980013641"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 
 [compat]
