--- a/Project.toml
+++ b/Project.toml
@@ -8,6 +8,7 @@ FastLapackInterface = "29a986be-02c6-4525-aec4-84b980013641"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 
 [compat]
+FastLapackInterface = "1"
 julia = "1.7"
 
 [extras]
