--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 *.jl.*.cov
 *.jl.cov
 *.jl.mem
-/Manifest.toml
+Manifest.toml
+test/Manifest.toml
+docs/Manifest.toml
 /docs/build/
 *.DS_Store
 .DS_Store
